Remove body overflow:hidden of CSS to prevent scrollbar hiding

--- a/static/home_web/css/home_page.css
+++ b/static/home_web/css/home_page.css
@@ -93,10 +93,6 @@ nav a {
                 no-repeat;
 }
 
-body.loading {
-    overflow: hidden;
-}
-
 body.loading #spinner {
     display: block;
 }
